# garbage_bin

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  anchor.patch  detect.py  garbage_bin.ipynb  main.py  model_main.py  podman-systemd.service  pyproject.toml  renovate.json  requirements.txt  train.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: auto-release.yml  python-app.yml  release.yml  scorecard.yml  test.yml
annotations/: label_map.pbtxt  labels.csv
flask/: app.py  loop.py  simple.py  smartthings.py
flask/ssd/: frozen_inference_graph.pb
flask/templates/: index.html
flask/utils/: detect.py  ssd.py  ssd2.py  ssd_labels.py  tfssd.py
garbage_bin/: detect.py  device.py  healthcheck.py  main.py
images/: labels.txt
scripts/: capture.sh  create-label-map.py  generate_tfrecord.py  no-commit-to-master.sh  prepare.sh  split_labels.py  update_model.sh  xml_to_csv.py
tests/: detect_test.py  device_test.py  main_test.py  save_test.py
