[tool.poetry]
name = "garbage-bin"
version = "0.1.0"
description = ""
authors = ["Brian Egge <brianegge@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "8.3.10"
pillow = "^10.4.0"
imageio = "^2.35.1"
sdnotify = "^0.3.2"
paho-mqtt = "^2.1.0"
requests = "^2.32.3"
systemd-python = "^235"
black = "^24.10.0"
ruff = "^0.6.9"
pytest = "^8.3.3"
pre-commit = "^4.0.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
