[build-system]
# Should be the same as `$POETRY_VERSION`:
requires = ["poetry-core>=1.6"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "garbage_bin"
version = "0.1.0"
description = ""
authors = ["Brian Egge <brianegge@gmail.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ultralytics = "8.3.223"
pillow = "^11.0.0"
imageio = "^2.35.1"
sdnotify = "^0.3.2"
paho-mqtt = "^2.1.0"
requests = "^2.32.3"
systemd-python = "^235"
opencv-python-headless = "^4.10.0.84"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^25.0.0"
coverage = "^7.6.4"
pytest-cov = "^6.0.0"
ruff = "^0.14.0"
pre-commit = "^4.0.1"
pytest-mock = "^3.14.0"

[tool.pytest.ini_options]
python_files = "*_test.py"
testpaths = ["tests"]
pythonpath = "garbage_bin"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E203", "E501"]

[tool.pyright]
include = ["garbage_bin", "tests"]
