[project]
name = "garbage_bin"
version = "0.1.0"
description = ""
authors = [{ name = "Brian Egge", email = "brianegge@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "ultralytics==8.4.12",
    "pillow>=12.0.0",
    "imageio>=2.35.1",
    "sdnotify>=0.3.2",
    "paho-mqtt>=2.1.0",
    "requests>=2.32.3",
    "opencv-python-headless>=4.10.0.84",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "black>=25.0.0",
    "coverage>=7.6.4",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "pre-commit>=4.0.1",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = "*_test.py"
testpaths = ["tests"]
pythonpath = "garbage_bin"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["E203", "E501"]

[tool.pyright]
include = ["garbage_bin", "tests"]
